# haven-daemon

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
haven-client/: Cargo.toml
haven-client/src/: attach.rs  autostart.rs  client.rs  keys.rs  lib.rs
haven-daemon/: Cargo.toml
haven-daemon/src/: cli.rs  cli_haven.rs  daemon.rs  history.rs  main.rs  pet_name.rs  picker.rs  protocol.rs  pty.rs  session.rs
haven-protocol/: Cargo.toml
haven-protocol/src/: error.rs  event.rs  host.rs  lib.rs  message.rs  session.rs
