[package]
name = "haven-client"
description = "Reusable Unix-socket client + interactive attach loop for haven-session-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
haven-protocol = { path = "../haven-protocol" }
serde = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
