[package]
name = "haven-daemon"
description = "Haven session daemon - persistent terminal session manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "haven-session-daemon"
path = "src/main.rs"

[dependencies]
haven-protocol = { path = "../haven-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
portable-pty = "0.9"
nix = { version = "0.29", features = ["socket", "signal", "user", "fs"] }
directories = "6"
dirs = "6"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
libc = "0.2"
regex = "1"
